# desert-drive-opengl

./: .gitignore  Animation.h  Animator.cpp  Animator.h  AssimpImport.cpp  AssimpImport.h  BezierAnimation.h  CMakeLists.txt  DynamicLight.cpp  DynamicLight.h  Mesh3D.cpp  Mesh3D.h  Object3D.cpp  Object3D.h  README.md  RotationAnimation.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  SkyShading.cpp  StbImage.cpp  StbImage.h  Texture.h  TranslationAnimation.h  UserInput.cpp  UserInput.h  Vehicle.cpp  Vehicle.h  glad.c  main.cpp  objectHelper.cpp  objectHelper.h
assets/models/mil_jeep_fbx/: blank_object.fbx  chassis.fbx  f_l_tire.fbx
assets/shaders/: colors.frag  light_perspective.vert  lighting.frag  no_transform.vert
include/: AssimpImport.h  DynamicLight.h  Mesh3D.h  Object3D.h  Scene.h  ShaderProgram.h  SkyShading.h  StbImage.h  Texture.h  Vehicle.h
include/KHR/: khrplatform.h
include/glad/: glad.h
models/: bunny_textured.mtl
models/desert/: Cactus.fbx  Shrub_mm_01.fbx  Stone_mm_03.fbx
models/mil_jeep_fbx/: b_l_tire.fbx  b_l_tire_centered.fbx  b_r_tire.fbx  b_r_tire_centered.fbx  f_l_tire_centered.fbx  f_r_tire.fbx  f_r_tire_centered.fbx  gun_back.fbx  gun_top.fbx
models/racetrack/: arena.mtl
shaders/: color_perspective.vert  colors.frag  light_perspective.vert  lighting.frag  no_transform.vert  texture_mapped.frag  texture_perspective.vert  texturing.frag
src/: Animator.cpp  AssimpImport.cpp  DynamicLight.cpp  Mesh3D.cpp  Object3D.cpp  Scene.cpp  ShaderProgram.cpp  SkyShading.cpp  StbImage.cpp  UserInput.cpp  Vehicle.cpp  glad.c  main.cpp
